--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
                                     <h4>Abhisek Tiwari</h4>
                                     <p>President</p>
                                     <ul>
-                                        <li><a href="https://abhisektiwari.github.io/" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                                        <li><a href="https://abhisektiwari.github.io/"><i class="fa fa-dribbble"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
@@ -831,6 +831,17 @@
                                         <li><a href="" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                         <li><a href="" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                             <div class="team-member">
+                                <img src="images/team/Medhashree.jpeg" alt="">
+                                <div class="team-details">
+                                    <h4>Medhashree Ghosh</h4>
+                                    <p>Secretary</p>
+                                    <ul>
+                                        <li><a href="https://www.facebook.com/medhasree.ghosh?mibextid=ZbWKwL" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/medhasree-ghosh-080018233" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
