--- a/index.html
+++ b/index.html
@@ -301,17 +301,19 @@
             <div class="events-container">
                 <div class="our-team">
 
-                    <div class="event">
-                        <img src="images/event/event-1.png" alt="" width="270" height="270">
-                        <h4>Hackathon</h4>
-                        <p>14th Oct 2017</p>
+                     <div class="event">
+                        <img src="images/event/MGM.jpg" style="width: 300px; height: 200px;">
+                        <h4><b>Meet and Greet with MathWorks Engineer</b></h4>
+                        <p>20th October 2022</p>
                     </div>
 
                     <div class="event">
-                        <img src="images/event/event-2.jpg" alt="" style="width: 270px; height: 270px;">
-                        <h4>24 Hrs Hackathon</h4>
-                        <p>30th Sept 2016</p>
+                        <img src="images/event/IP.jpeg" style="width: 300px; height: 200px;">
+                        <h4><b>Start-up Idea Pitching BootCamp (In collaboration with RSD 2023)</b></h4>
+                        <p>5th March 2023</p>
                     </div>
+
+                   
 
                 </div>
             </div>
@@ -482,7 +484,7 @@
     <!-- End benefits Section -->
 
     <!-- Start Join Section -->
-    <section id="join" class="about-section">
+   <!--  <section id="join" class="about-section">
         <div class="container">
             <div class="level1block">
                 <div class="level2block">
@@ -557,7 +559,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Join Section -->
 
 
@@ -586,9 +588,9 @@
                     </div>
                 </div>
             </div>
-            
-            <br/ ><br/ ><br/ >
-            <div class="page-column">
+           <!--  
+            <br/ ><br/ ><br/ > -->
+            <!-- <div class="page-column">
                 <h3>Upcoming Events</h3>
                 <div class="grid js-grid">
                     <div class="grid__item js-item">
@@ -599,7 +601,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     <!-- End Partner Section -->
 
@@ -775,8 +777,7 @@
                                     <h4>Sriparna Saha</h4>
                                     <p>Chairman</p>
                                     <ul>
-                                        <li><a href="https://www.facebook.com/profile.php?id=100005700078449" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="https://www.facebook.com/profile.php?id=100005700078449" target="_self"><i class="fa fa-facebook"></i></a></li>
                                         <li><a href="https://in.linkedin.com/in/sriparna-saha-1a1338161" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
@@ -918,8 +919,8 @@
                         <h4>Contact info</h4>
                         <ul>
                             <li><strong>E-mail :</strong> ieeesb@iitp.ac.in</li>
-                            <li><strong>Mobile :</strong> +91 7301471017</li>
-                            <li><strong>Web :</strong> iitp.ac.in/ieeesb</li>
+                            <li><strong>Mobile :</strong> +91 9123979259</li>
+                            <li><strong>Web :</strong> https://ieeesbiitp.github.io/</li>
                         </ul>
                     </div>
                 </div>
@@ -970,8 +971,8 @@
                     <div class="col-md-4 col-xs-12">
                         <div class="footer-social text-center">
                             <ul>
-                                <li><a href="https://www.facebook.com/ieeesbIITP/"><i class="fa fa-facebook"></i></a></li>
-                            </ul>
+                                <li>  <a href="https://www.linkedin.com/company/ieee-student-branch-iit-patna/"><i class="fa fa-linkedin"></i></a>  <a href="https://www.facebook.com/ieeesbIITP/"><i class="fa fa-facebook"></i></a>  </li>
+                         </ul>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
