--- a/index.html
+++ b/index.html
@@ -790,35 +790,37 @@
                                     <p>President</p>
                                     <ul>
                                         <li><a href="https://abhisektiwari.github.io/"><i class="fa fa-dribbble"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="https://twitter.com/abhisekti"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/abhisekti/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
 
                             <div class="team-member">
-                                <img src="images/team/vc.png" alt="">
+                                <img src="images/team/PKB.jpeg" alt="">
                                 <div class="team-details">
                                     <h4>Prabhat Bharti</h4>
                                     <p>Vice-President</p>
                                     <ul>
-                                        <li><a href="" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="https://www.facebook.com/prabhat.bharti1" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://twitter.com/csprabhat"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="http://www.linkedin.com/in/prabhat-kr-bharti" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
 
                             <div class="team-member">
-                                <img src="images/team/vc.png" alt="">
+                                <img src="images/team/ARay.jpg" alt="">
                                 <div class="team-details">
                                     <h4>Abhisek Ray</h4>
                                     <p>General Secretary</p>
                                     <ul>
-                                        <li><a href="" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                                        <li><a href="" target="_blank"><i class="fa fa-pinterest"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+<!--                                         <li><a href="" target="_blank"><i class="fa fa-facebook"></i></a></li>
+ -->                                    
+                                       <!--  <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+                                        <li><a href="https://www.linkedin.com/in/abhisek-ray-6147a445/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+<!--                                         <li><a href="" target="_blank"><i class="fa fa-pinterest"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
                                     </ul>
                                 </div>
                             </div>
