ieee_day23 webpage added

--- a/index.html
+++ b/index.html
@@ -313,7 +313,12 @@
                         <p>5th March 2023</p>
                     </div>
 
-                   
+                    <div class="event">
+                        <a href="ieee_day23.html">
+                        <img src="images/event/IEEE-Day.png" style="width: 200px; height: auto;">
+                        <h4><b>IEEE Day 2023</b></h4>
+                        <p>September 2023</p></a>
+                    </div>
 
                 </div>
             </div>
