--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -119,7 +119,22 @@
                         </div>
                     </div>
 
-                    <!-- Speaker Sessions Card -->
+
+                    <!-- Symposium Card -->
+                    <div class="col-lg-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Research Symposium</h5>
+                                <p class="card-text">Delve into the latest technological advancements in our symposium.
+                                </p>
+                                <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#symposiumModal">Learn More</button>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Re-engineer Card -->
                     <div class="col-lg-4 mb-4">
                         <div class="card">
                             <div class="card-body">
@@ -130,21 +145,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Symposium Card -->
-                    <div class="col-lg-4 mb-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Symposium</h5>
-                                <p class="card-text">Delve into the latest technological advancements in our symposium.
-                                </p>
-                                <button type="button" class="btn btn-primary" data-toggle="modal"
-                                    data-target="#symposiumModal">Learn More</button>
-
-                            </div>
-                        </div>
-                    </div>
-
 
                 </div>
             </div>
@@ -176,7 +176,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Symposium</h5>
+                            <h5 class="modal-title">Research Symposium</h5>
                         </div>
                         <div class="modal-body">
                             The IEEE Day Symposium is a cornerstone of our celebration, offering a platform for in-depth
