--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -50,7 +50,8 @@
     <!-- Banner Section -->
     <section id="banner" class="bg-light text-center py-5" style="color: #00629B; font-weight: bold;">
         <div class="container">
-            <h1>Welcome to IEEE Day 2023</h1>
+            <h1>Welcome to ISAAC 2023</h1>
+            <h1>(IEEE Day)</h1>
             <p>Join us for a day of innovation and collaboration</p>
             <a href="#events" class="btn btn-primary">Explore Events</a>
         </div>
@@ -241,7 +242,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
-            &copy; 2023 IEEE Day
+            IEEE Day 2023
         </div>
     </footer>
 
