--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -21,9 +21,10 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="index.html" style="color: #00629B;"><img src="images/logo/ieeesb.jpeg" height="50px"></a>
+            <a class="navbar-brand" href="index.html" style="color: #00629B;"><img src="images/logo/ieeesb.jpeg"
+                    height="50px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,9 +51,10 @@
     <!-- Banner Section -->
     <section id="banner" class="bg-light text-center py-5" style="color: #00629B; font-weight: bold;">
         <div class="container">
-            <h1>Welcome to ISAAC 2023</h1>
-            <h1>(IEEE Day)</h1>
-            <p>Join us for a day of innovation and collaboration</p>
+            <h1>NATIONAL SYMPOSIUM OF RESEARCH SCHOLARS" </h1>
+            <h1>(NSRS- 2023)</h1>
+            <p>Organised by IEEE Patna Sub-Section, MTT-S SBC IIT Patna, AP-S SBC IIT Patna, IEEE AP Chapter Patna, and
+                IEEE SB IIT Patna. </p>
             <a href="#events" class="btn btn-primary">Explore Events</a>
         </div>
     </section>
@@ -63,19 +65,22 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2 style="color: #00629B; font-weight: bold;">About IEEE Day</h2>
-                    <p class="my-5" style="text-align: justify;">IEEE Day is celebrated on October 3rd each year, marking the anniversary of the
+                    <p class="my-5" style="text-align: justify;">IEEE Day is celebrated on October 3rd each year,
+                        marking the anniversary of the
                         first time IEEE
                         members gathered to share their technical ideas in 1884. It is a global event that unites IEEE
                         members, engineers, scientists, and technology enthusiasts worldwide.</p>
-                    <p style="text-align: justify;"> IEEE Day is a unique occasion that allows us to revel in technological innovation and pay tribute to IEEE's pivotal role in shaping the world we live in today. IEEE Day provides a platform to celebrate technological innovation and the contributions of IEEE
+                    <p style="text-align: justify;"> IEEE Day is a unique occasion that allows us to revel in
+                        technological innovation and pay tribute to IEEE's pivotal role in shaping the world we live in
+                        today. IEEE Day provides a platform to celebrate technological innovation and the contributions
+                        of IEEE
                         to the advancement of society. It's a day to recognize the impact of electrical, electronics,
                         and computer engineering on our daily lives.</p>
 
                 </div>
 
                 <div class="col-lg-6 d-flex justify-content-center align-items-center">
-                    <img src="images/event/IEEE-Day.png"
-                        alt="IEEE Day Image" class="img-fluid">
+                    <img src="images/event/IEEE-Day.png" alt="IEEE Day Image" class="img-fluid">
                 </div>
             </div>
             <div class="row my-3">
@@ -102,9 +107,9 @@
     </section>
 
     <!-- Events Section -->
-    <section id="events" class="py-3">
+    <section id="events" class="bg-light py-3">
         <div class="container">
-            <h2 style="color: #00629B; font-weight: bold;">Upcoming Events</h2>
+            <h2 style="color: #00629B; font-weight: bold;">Event Highlights</h2>
             <div class="container mt-5">
                 <div class="row">
 
@@ -112,8 +117,8 @@
                     <div class="col-lg-4 mb-4">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title" style="color: #00629B; ">Speaker Sessions</h5>
-                                <p class="card-text">Join us for insightful talks by industry experts.</p>
+                                <h5 class="card-title" style="color: #00629B; ">Plenary Talks</h5>
+                                <p class="card-text">By experts from IITs, ISRO, DRDO, and NASA.</p>
                                 <button type="button" class="btn btn-primary" data-toggle="modal"
                                     data-target="#speakerSessionsModal">Learn More</button>
                             </div>
@@ -125,8 +130,9 @@
                     <div class="col-lg-4 mb-4">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title" style="color: #00629B">Research Symposium</h5>
-                                <p class="card-text">Delve into the latest technological advancements in our symposium.
+                                <h5 class="card-title" style="color: #00629B">Symposium of Research Scholars</h5>
+                                <p class="card-text">Symposium of Research students pursuing Master/Ph.D. program in any
+                                    recognized Indian University.
                                 </p>
                                 <button type="button" class="btn btn-primary" data-toggle="modal"
                                     data-target="#symposiumModal">Learn More</button>
@@ -140,7 +146,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title" style="color: #00629B;">Re-Engineer</h5>
-                                <p class="card-text">Participate in our engineering challenge and innovate.</p>
+                                <p class="card-text">The art of Practicing the Engineering Skills.</p>
                                 <button type="button" class="btn btn-primary" data-toggle="modal"
                                     data-target="#reModal1">Learn More</button>
                             </div>
@@ -156,7 +162,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" style="color: #00629B; font-weight: bold;">Speaker sessions</h5>
+                            <h5 class="modal-title" style="color: #00629B; font-weight: bold;">Plenary Talks</h5>
                         </div>
                         <div class="modal-body">
                             IEEE Day brings together some of the brightest minds and experts in the field to inspire and
@@ -218,6 +224,97 @@
         </div>
     </section>
 
+    <section id="fee" class="container py-5">
+        <h2 class="fee-heading" style="color: #00629B; font-weight: bold;">Registration Fee</h2>
+        <table class="container table my-5">
+
+            <tbody>
+                <tr>
+                    <td>All-IEEE Members</td>
+                    <td>Rs 300</td>
+                </tr>
+                <tr>
+                    <td>Non-IEEE Members</td>
+                    <td>Rs 500</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section id="dates" class="container py-3">
+        <h2 class="date-heading" style="color: #00629B; font-weight: bold;">Important Dates</h2>
+        <table class="container table my-5">
+
+            <tbody>
+                <tr>
+                    <td>Registration opens</td>
+                    <td>September 12, 2023</td>
+                </tr>
+                <tr>
+                    <td>Registrations and Submission of Abstracts close</td>
+                    <td>September 25, 2023</td>
+                </tr>
+                <tr>
+                    <td>Confirmation of Registration with Payment</td>
+                    <td>September 25, 2023</td>
+                </tr>
+                <tr>
+                    <td>Declaration of Shortlisted Candidates:</td>
+                    <td>September 29, 2023</td>
+                </tr>
+                <tr>
+                    <td>Poster Submission by Shortlisted Candidates</td>
+                    <td>October 3, 2023</td>
+                </tr>
+                <tr>
+                    <td>Three Minutes Research Presentation PPT by Shortlisted Candidates</td>
+                    <td>October 3, 2023</td>
+                </tr>
+
+            </tbody>
+        </table>
+    </section>
+
+    <section id="events" class="py-3">
+        <div class="container">
+            <h2 style="color: #00629B; font-weight: bold;">Travel Grants and Prizes</h2>
+            <div class="container mt-5">
+                <div class="row">
+
+                    <div class="col-lg-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <p class="card-text">The top 4 shortlisted candidates (IEEE Members only) from outside
+                                    Patna may get a maximum travel grant of Rs 2000 or actual travel expense whichever
+                                    is less. </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <p class="card-text">Total take-away prize money- 1st Prize Rs 5000, 2nd Prize Rs 3000,
+                                    3rd Prize Rs 2000.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <p class="card-text">All registered participants will get a participation certificate.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+    </section>
     <!-- Contact Section -->
     <section id="contact" class="bg-light py-5">
         <div class="container">
@@ -225,14 +322,30 @@
             <div class="row my-5">
                 <div class="col-md-6">
                     <div class="contact-info">
-                        <p><strong>Address:</strong> Indian Institute of Technology Patna, Bihta, Dayalpur Daulatpur, Bihar 801106</p>
+                        <p><strong>Address:</strong> Indian Institute of Technology Patna, Bihta, Dayalpur Daulatpur,
+                            Bihar 801106</p>
                         <p><strong>Email:</strong> <a href="mailto:ieeesb@iitp.ac.in">ieeesb@iitp.ac.in</a></p>
                         <p><strong>Phone:</strong> +91 9123979259</p>
-                        <p><strong>Website:</strong> <a href="https://ieeesbiitp.github.io/">https://ieeesbiitp.github.io/</a></p>
+                        <p><strong>Website:</strong> <a
+                                href="https://ieeesbiitp.github.io/">https://ieeesbiitp.github.io/</a></p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div style="text-decoration:none; overflow:hidden;max-width:100%;width:500px;height:500px;"><div id="embedded-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Indian+Institute+of+Technology,+Patna+(IIT+Patna),+Bihta,+Bihar,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="google-map-code-enabler" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="authorize-map-data">premium bootstrap themes</a><style>#embedded-map-display img{max-height:none;max-width:none!important;background:none!important;}</style></div>
+                    <div style="text-decoration:none; overflow:hidden;max-width:100%;width:500px;height:500px;">
+                        <div id="embedded-map-display" style="height:100%; width:100%;max-width:100%;"><iframe
+                                style="height:100%;width:100%;border:0;" frameborder="0"
+                                src="https://www.google.com/maps/embed/v1/place?q=Indian+Institute+of+Technology,+Patna+(IIT+Patna),+Bihta,+Bihar,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+                        </div><a class="google-map-code-enabler" rel="nofollow"
+                            href="https://www.bootstrapskins.com/themes" id="authorize-map-data">premium bootstrap
+                            themes</a>
+                        <style>
+                            #embedded-map-display img {
+                                max-height: none;
+                                max-width: none !important;
+                                background: none !important;
+                            }
+                        </style>
+                    </div>
                 </div>
             </div>
 
@@ -250,8 +363,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 <style>
-    .btn-primary{
+    .btn-primary {
         background-color: #00629B !important;
     }
 </style>
+
 </html>
