form link added

--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -41,6 +41,9 @@
                         <a class="nav-link" href="#events">Events</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#fee">Register</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -59,6 +62,7 @@
         </div>
     </section> -->
     <img src="images/ieeeday23/nsrs.png" style="width: 100vw; height: auto;">
+    <div class="container text-center"><a href="https://docs.google.com/forms/d/e/1FAIpQLScZ5IPW3XGp2bQ46Pio0zefVUAcyaL7F3hjhDkKpUtfZZy1_Q/viewform"><button type="button" class="btn btn-primary">Register for NSRS 2023</button></a></div>
     <!-- About Section -->
     <section id="about" class="">
         <div class="container">
@@ -173,7 +177,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Register</button>
+                            <!-- <button type="button" class="btn btn-primary">Register</button> -->
                         </div>
                     </div>
                 </div>
@@ -194,7 +198,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Register</button>
+                            <!-- <button type="button" class="btn btn-primary">Register</button> -->
                         </div>
                     </div>
                 </div>
@@ -216,7 +220,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Register</button>
+                            <!-- <button type="button" class="btn btn-primary">Register</button> -->
                         </div>
                     </div>
                 </div>
@@ -240,6 +244,7 @@
                 </tr>
             </tbody>
         </table>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScZ5IPW3XGp2bQ46Pio0zefVUAcyaL7F3hjhDkKpUtfZZy1_Q/viewform"><button type="button" class="btn btn-primary">Register for NSRS 2023</button></a>
     </section>
 
     <section id="dates" class="container py-3">
@@ -333,6 +338,8 @@
                         <p><strong>Website:</strong> <a
                                 href="https://ieeesbiitp.github.io/">https://ieeesbiitp.github.io/</a></p>
                     </div>
+                    <a href="https://www.ieee.org/membership/join/index.html"><button type="button" class="btn btn-primary">Join IEEE</button></a>
+    
                 </div>
                 <div class="col-md-6">
                     <div style="text-decoration:none; overflow:hidden;max-width:100%;width:500px;height:500px;">
