technotricks name change

--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -91,8 +91,8 @@
                 </div>
                 <div class="col-lg-6 text-justify" style="text-align: justify;">
                     <p>The Research symposia will primarily be opened for masters and Ph.D. students to share their
-                        research ideas through posters, whereas the re-engineering event is for any B. Tech, M.Tech, or
-                        PhD student to present their models. </p>
+                        research ideas through posters, whereas the TechnoTricks event is for any B. Tech, M.Tech, or
+                        PhD student to present their models. The top 3 selected problem-based prototypes will get a chance to pre-incubate and develop full product.</p>
                     <p>This event will provide a peer platform for collaborations with the experts in these fields.
                         Exciting prizes with certificates for all participants are also offered in this program.
 
@@ -144,11 +144,11 @@
                         </div>
                     </div>
 
-                    <!-- Re-engineer Card -->
+                    <!-- TechnoTricks Card -->
                     <div class="col-lg-4 mb-4">
                         <div class="card" style="height: 100%;">
                             <div class="card-body">
-                                <h5 class="card-title" style="color: #00629B;">Re-Engineer</h5>
+                                <h5 class="card-title" style="color: #00629B;">TechnoTricks</h5>
                                 <p class="card-text">The art of Practicing the Engineering Skills.</p>
 
                             </div>
@@ -210,14 +210,14 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" style="color: #00629B; font-weight: bold;">Re-Engineer</h5>
+                            <h5 class="modal-title" style="color: #00629B; font-weight: bold;">TechnoTricks</h5>
                         </div>
                         <div class="modal-body">
-                            "Re-Engineer" is an exciting and hands-on activity that lies at the heart of our IEEE Day
+                            "TechnoTricks" is an exciting and hands-on activity that lies at the heart of our IEEE Day
                             celebration.
                             This event challenges participants to apply their engineering skills, creativity, and
                             problem-solving abilities to tackle real-world problems and come up with innovative
-                            solutions.
+                            solutions. The top 3 selected problem-based prototypes will get a chance to pre-incubate and develop full product.
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -287,7 +287,7 @@
         <div class="container">
             <h2 style="color: #00629B; font-weight: bold;">Travel Grants and Prizes</h2>
             <div class="container mt-5">
-                <div class="row" , style="text-align: center;">
+                <div class="row d-flex flex-row justify-content-around" , style="text-align: center;">
 
                     <div class="col-lg-4 mb-4">
                         <div class="card card-hover" style="height: 100%;">
@@ -313,19 +313,25 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="col-lg-4 mb-4">
+                        <div class="card card-hover" style="height: 100%;">
+                            <div class="card-body">
+                                <p class="card-text"><b>The Top 3</b><br/>selected problem-based prototypes in <b>TechnoTricks</b> will get a chance to <br/><b>pre-incubate and develop full product.</b></p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 mb-4">
                         <div class="card card-hover" style="height: 100%;">
                             <div class="card-body">
                                 <p class="card-text">
-                                    <br /><b>All registered participants</b><br /> will get a <br /><b>Participation
+                                    <b>All registered participants</b><br /> will get a <br /><b>Participation
                                         Certificate.</b>
                                 </p>
 
                             </div>
                         </div>
                     </div>
-
+                    
                 </div>
             </div>
     </section>
