--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -64,7 +64,10 @@
     <img src="images/ieeeday23/nsrs.png" style="width: 100vw; height: auto;">
     <div class="container text-center"><a
             href="https://docs.google.com/forms/d/e/1FAIpQLScZ5IPW3XGp2bQ46Pio0zefVUAcyaL7F3hjhDkKpUtfZZy1_Q/viewform"><button
-                type="button" class="btn btn-primary">Register for NSRS 2023</button></a></div>
+                type="button" class="btn btn-primary">Register for NSRS 2023</button></a><br/>
+<b>Date : 14th and 15th Oct 2023<br/>
+Venue : IIT Patna</b>
+</div>
     <!-- About Section -->
     <section id="about" class="">
         <div class="container">
@@ -92,7 +95,7 @@
                 <div class="col-lg-6 text-justify" style="text-align: justify;">
                     <p>The Research symposia will primarily be opened for masters and Ph.D. students to share their
                         research ideas through posters, whereas the TechnoTricks event is for any B. Tech, M.Tech, or
-                        PhD student to present their models. The top 3 selected problem-based prototypes will get a chance to pre-incubate and develop full product.</p>
+                        PhD student to present their models and showcase their practicing engineering skills. </p>
                     <p>This event will provide a peer platform for collaborations with the experts in these fields.
                         Exciting prizes with certificates for all participants are also offered in this program.
 
@@ -149,7 +152,7 @@
                         <div class="card" style="height: 100%;">
                             <div class="card-body">
                                 <h5 class="card-title" style="color: #00629B;">TechnoTricks</h5>
-                                <p class="card-text">The art of Practicing the Engineering Skills.</p>
+                                <p class="card-text">The art of Practicing Engineering Skills, making problem-based prototypes,  and demonstration.</p>
 
                             </div>
                             <div class="container my-3"> <button type="button" class="btn btn-primary"
@@ -256,27 +259,27 @@
             <tbody>
                 <tr>
                     <td>Registration opens</td>
-                    <td>September 12, 2023</td>
+                    <td>September 15, 2023</td>
                 </tr>
                 <tr>
                     <td>Registrations and Submission of Abstracts close</td>
-                    <td>September 25, 2023</td>
+                    <td>September 30, 2023</td>
                 </tr>
                 <tr>
                     <td>Confirmation of Registration with Payment</td>
-                    <td>September 25, 2023</td>
+                    <td>September 30, 2023</td>
                 </tr>
                 <tr>
                     <td>Declaration of Shortlisted Candidates:</td>
-                    <td>September 29, 2023</td>
+                    <td>October 5, 2023</td>
                 </tr>
                 <tr>
                     <td>Poster Submission by Shortlisted Candidates</td>
-                    <td>October 3, 2023</td>
+                    <td>October 10, 2023</td>
                 </tr>
                 <tr>
                     <td>Three Minutes Research Presentation PPT by Shortlisted Candidates</td>
-                    <td>October 3, 2023</td>
+                    <td>October 10, 2023</td>
                 </tr>
 
             </tbody>
