--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IEEE DAY 23</title>
+    <link rel="icon" href="images/logo/ieeesb.jpeg" type="image/icon type">
+    <title>NSRS 2023</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -64,10 +65,33 @@
     <img src="images/ieeeday23/nsrs.png" style="width: 100vw; height: auto;">
     <div class="container text-center"><a
             href="https://docs.google.com/forms/d/e/1FAIpQLScZ5IPW3XGp2bQ46Pio0zefVUAcyaL7F3hjhDkKpUtfZZy1_Q/viewform"><button
-                type="button" class="btn btn-primary">Register for NSRS 2023</button></a><br/>
-<b>Date : 14th and 15th Oct 2023<br/>
-Venue : IIT Patna</b>
-</div>
+                type="button" class="btn btn-primary">Register for NSRS 2023</button></a><br />
+
+
+        <div class="container d-flex justify-content-center py-5">
+            <div class="card">
+                <div class="card-body">
+                    <table class="table table-borderless">
+                        <tbody>
+                            <tr>
+                                <th scope="row"> <i class="fa fa-calendar"></i> &ensp;Date :</th>
+                                <td>14th and 15th Oct 2023</td>
+
+                            </tr>
+                            <tr>
+                                <th scope="row"><i class="fa fa-map-marker"></i> &ensp; Venue :</th>
+                                <td>IIT Patna</td>
+
+                            </tr>
+                        </tbody>
+
+                    </table>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
     <!-- About Section -->
     <section id="about" class="">
         <div class="container">
@@ -152,7 +176,8 @@ Venue : IIT Patna</b>
                         <div class="card" style="height: 100%;">
                             <div class="card-body">
                                 <h5 class="card-title" style="color: #00629B;">TechnoTricks</h5>
-                                <p class="card-text">The art of Practicing Engineering Skills, making problem-based prototypes,  and demonstration.</p>
+                                <p class="card-text">The art of Practicing Engineering Skills, making problem-based
+                                    prototypes, and demonstration.</p>
 
                             </div>
                             <div class="container my-3"> <button type="button" class="btn btn-primary"
@@ -220,7 +245,8 @@ Venue : IIT Patna</b>
                             celebration.
                             This event challenges participants to apply their engineering skills, creativity, and
                             problem-solving abilities to tackle real-world problems and come up with innovative
-                            solutions. The top 3 selected problem-based prototypes will get a chance to pre-incubate and develop full product.
+                            solutions. The top 3 selected problem-based prototypes will get a chance to pre-incubate and
+                            develop full product.
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -319,7 +345,10 @@ Venue : IIT Patna</b>
                     <div class="col-lg-4 mb-4">
                         <div class="card card-hover" style="height: 100%;">
                             <div class="card-body">
-                                <p class="card-text"><b>The Top 3</b><br/>selected problem-based prototypes in <b>TechnoTricks</b> will get a chance to <br/><b>pre-incubate and develop full product.</b></p>
+                                <p class="card-text"><b>The Top 3</b><br />selected problem-based prototypes in
+                                    <b>TechnoTricks</b> will get a chance to <br /><b>pre-incubate and develop full
+                                        product.</b>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -334,7 +363,7 @@ Venue : IIT Patna</b>
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
     </section>
