--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -98,8 +98,9 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2 style="color: #00629B; font-weight: bold;" class="my-4">About</h2>
-                    <p style="text-align: justify;">NSRS 2023 is a common platform for graduate students to present
-                        their research findings and discuss with peers and experts in their field.
+                    <p style="text-align: justify;">NSRS 2023 is a common platform for graduate students to postdoctoral
+                        researchers, to present their research findings and discuss with peers and experts in their
+                        field.
                     </p>
                     <p style="text-align: justify;"> This symposium will provide a platform for sharing knowledge,
                         receiving feedback, and networking within the research community of various disciplines like
@@ -117,9 +118,10 @@
                     <img src="images/logo/ieeesb.jpeg" alt="IEEE SB IITP" class="img-fluid" style="width:50%;">
                 </div>
                 <div class="col-lg-6 text-justify" style="text-align: justify;">
-                    <p>The Research symposia will primarily be opened for masters and Ph.D. students to share their
-                        research ideas through posters, whereas the TechnoTricks event is for any B. Tech, M.Tech, or
-                        PhD student to present their models and showcase their practicing engineering skills. </p>
+                    <p>The Research symposia will primarily be opened for masters, Ph.D. students, and researchers to
+                        share their research ideas through posters, whereas the TechnoTricks event is for any B.Tech,
+                        M.Tech, or PhD student to present their models and showcase their practicing engineering skills.
+                    </p>
                     <p>This event will provide a peer platform for collaborations with the experts in these fields.
                         Exciting prizes with certificates for all participants are also offered in this program.
 
