--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -79,7 +79,7 @@
 
                             </tr>
                             <tr>
-                                <th scope="row"><i class="fa fa-map-marker"></i> &ensp; Venue:</th>
+                                <th scope="row"><i class="fa fa-map-marker"></i>  Venue:</th>
                                 <td>IIT Patna</td>
 
                             </tr>
