TechnoTricks page added

--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -89,6 +89,21 @@
 
                 </div>
             </div>
+
+            <div class="card mx-3">
+                <div class="card-body">
+                    <table class="table table-borderless">
+                        <tbody class="glow">
+                            <br/>
+                                <a href="./ieee_day23/events/TechnoTricks.html" style="text-decoration: none;" class="glow"><b>Registration for TechnoTricks has started.</b><br/>
+                            Last Date to apply is 13th October, 2023</a>
+                            
+                        </tbody>
+
+                    </table>
+
+                </div>
+            </div>
         </div>
 
     </div>
@@ -314,7 +329,7 @@
         </table>
     </section>
 
-    <section id="events" class="py-3">
+    <section id="prizes" class="py-3">
         <div class="container">
             <h2 style="color: #00629B; font-weight: bold;">Travel Grants and Prizes</h2>
             <div class="container mt-5">
@@ -459,6 +474,24 @@
 
     .card-hover:hover {
         background-color: #d4d4d4;
+    }
+
+    .glow {
+        color: #00cf9b;
+        text-align: center;
+        -webkit-animation: glow 1s ease-in-out infinite alternate;
+        -moz-animation: glow 1s ease-in-out infinite alternate;
+        animation: glow 1s ease-in-out infinite alternate;
+    }
+
+    @-webkit-keyframes glow {
+        from {
+            color: #00629B;
+        }
+
+        to {
+            color: #ff9fdf;
+        }
     }
 </style>
 
