TechnoTricks page updated form

--- a/ieee_day23/events/TechnoTricks.html
+++ b/ieee_day23/events/TechnoTricks.html
@@ -52,10 +52,10 @@
         </div>
     </nav>
 
-    <img src="../../images/ieeeday23/nsrs.png" style="width: 100vw; height: auto;">
-    <div class="container text-center"><a
-            href="https://docs.google.com/forms/d/e/1FAIpQLScZ5IPW3XGp2bQ46Pio0zefVUAcyaL7F3hjhDkKpUtfZZy1_Q/viewform"><button
-                type="button" class="btn btn-primary">Register for NSRS 2023</button></a><br />
+    <img src="../../images/ieeeday23/technotricks.png" style="width: 100vw; height: auto;">
+    <div class="container-fluid text-center py-4" style="background-color: #b0cfdb;"><a
+            href="https://unstop.com/p/technotricks-indian-institute-of-technology-iit-patna-790470"><button
+                type="button" class="btn btn-primary">Register for TechnoTricks</button></a><br />
     </div>
     <!-- About Section -->
     <section id="about" class="my-5">
@@ -128,11 +128,12 @@
                         <li>This event is open for all above 18 years of age.</li>
                         <li>The Participation must be in a Team with minimum 2 and maximum 3 participants.</li>
                         <li>Each Team must submit only one solution.</li>
+                        <li>The solution must be from one of the 5 problem statements.</li>
                     </ul>    
                     </p>
                     <div class="container text-center my-5"><a
-                        href="https://docs.google.com/forms/d/e/1FAIpQLScZ5IPW3XGp2bQ46Pio0zefVUAcyaL7F3hjhDkKpUtfZZy1_Q/viewform"><button
-                            type="button" class="btn btn-primary">Register for NSRS 2023</button></a><br />
+                        href="https://unstop.com/p/technotricks-indian-institute-of-technology-iit-patna-790470"><button
+                            type="button" class="btn btn-primary">Register for TechnoTricks</button></a><br />
                 </div>
                 </div>
             </div>
