--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -68,7 +68,7 @@
                 type="button" class="btn btn-primary">Register for NSRS 2023</button></a><br />
 
 
-        <div class="container d-flex justify-content-center py-5">
+        <div class="container d-flex justify-content-around py-5">
             <div class="card">
                 <div class="card-body">
                     <table class="table table-borderless">
