--- a/ieee_day23/events/TechnoTricks.html
+++ b/ieee_day23/events/TechnoTricks.html
@@ -113,7 +113,7 @@
                                     <div class="d-flex align-items-center mb-0">
                                         The system should be equipped with sensors and computer
                         vision technology to detect and recognize human or vehicle intruders within the surveillance
-                        area and Desaster Area. This may involve object recognition, motion detection, or other relevant
+                        area and Disaster Area. This may involve object recognition, motion detection, or other relevant
                         techniques.
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                                 <div class="col-8">
                                     <div class="d-flex align-items-center mb-0">
                                         Tasking participants with creating robots that can
-                        assist in finding underground mins, autonomous robots capable of conducting surveillance and
+                        assist in finding underground mines, autonomous robots capable of conducting surveillance and
                         reconnaissance missions in challenging and hostile environments, and disaster response
                         scenarios. These robots should be capable of navigating challenging environments, locating
                         survivors, and providing support, such as delivering supplies or performing remote medical
