--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -19,6 +19,11 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
+<script type="text/javascript">
+    $(window).on('load', function() {
+        $('#myModal').modal('show');
+    });
+</script>
 
 <body>
     <!-- Navbar -->
@@ -116,6 +121,24 @@
         </div>
 
     </div>
+    
+    <div class="modal hide fade" id="myModal" >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" style="color: #00629B; font-weight: bold;">Plenary Talks</h5>
+                </div>
+                <div class="modal-body">
+                    <img src="images/ieeeday23/speakers.jpeg" style="width: 100%; height: auto;">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <!-- <button type="button" class="btn btn-primary">Register</button> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <!-- About Section -->
     <section id="about" class="">
         <div class="container">
